# yew-yo-mama-jokes-client

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  docker-compose.yml  index.html  proxy.py
proxy/: Dockerfile  requirements.txt
src/: main.rs
